1.3.0.6:
    - Fixed error where free(custom_data) was called twice in mcc172.c.
    - Fixed problem with the Python method interrupt_callback_enable().
    - Changed the installer to automatically enable SPI (and I2C if needed.)
    - Fixed trigger issue on MCC 172 (fix is in firmware version 1.01.)

1.3.0.5:
    - Fixed error when calling mcc172_a_in_clock_config_write() immediately after another
      function that communicates with the board.

1.3.0.4:
    - Added sensitivity factor setting to the MCC 172 data.

1.3.0.3:
    - Added error reporting if user passes OPTS_EXTCLOCK when starting a scan on MCC 172.
    - Clarified MCC 172 documentation.

1.3.0.2:
    - Added support for rev 2 MCC 172 boards.

1.3.0.1:
    - Fixed scan bug from 1.2.0.3 for the MCC 172.

1.3.0:
    - Added support for the MCC 172.

1.2.0.4:
    - Fixed mismatch in error message strings in the C library.
    - Clarified the address jumper settings in the documentation.

1.2.0.3:
    - Fixed bug in MCC 118 scan data read functions where a 16-bit variable was
    used instead of 32 bits, so more than 64K samples per channel in the scan
    buffer would not be read at a time.
    - Fixed issue reading daqhat EEPROMs in newer versions of Raspbian Buster.
    - Added information on MCC 118 OEM.
    - Added daqhats_version command.
    - Added firmware version history to tools README file.

1.2.0.2:
    - Fixed MCC 118 scan thread sync issues that could cause occasional hangs
    when starting a scan.

1.2.0.1:
    - Fixed compile warnings in Raspbian Buster.
    - Fixed Python web server examples for compatibility with Dash 1.0.

1.2.0:
    - Added support for the MCC 134.
    - Fixed conflict with libi2c-dev.

1.1.0.3:
    - Cleared up some memory allocation errors reported by valgrind.
    - Set the value returned by open functions when trying to open the
    wrong type of board to RESULT_INVALID_DEVICE (or an appropriate
    exception message in Python.)